# tauri-app

./: .gitignore  Taskfile.yml  ctrf-report.json  eslint.config.mjs  eslint.config.ts  lint-staged.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.ts  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml  delete-action-cache.yml  release.yml  test.yml
.tauri/: updater.key  updater.key.pub
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json5
src-tauri/capabilities/: default.json5  desktop.json5
src-tauri/src/: lib.rs
src-tauri/src/command/: greet.rs
src-tauri/tests/: greet_test.rs
src/lib/: updater.ts
