[package]
name = "tauri-app"
version = "0.1.4"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = ["config-json5"] }

[dependencies]
tauri = { version = "2.8.5", features = ["config-json5"] }
tauri-plugin = "2.4.0"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-log = "2.7.0"
tauri-plugin-opener = "2.5.0"
aec-rs = "1.0.0"
log = "0.4.28"
samplerate = "0.2.4"
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.144"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-process = "2.3.0"
tauri-plugin-updater = "2.9.0"
